# crackers

./: .gitignore  Cargo.toml  README.md  execve.toml  libc_execve.toml  libc_mmap.toml  mprotect.toml  release-plz.toml  test_config.toml
.github/workflows/: build.yml  python-style.yml  python.yml  style.yml
crackers/: CHANGELOG.md  Cargo.toml
crackers/src/: error.rs  lib.rs  trace.rs
crackers/src/bench/: mod.rs
crackers/src/config/: constraint.rs  error.rs  meta.rs  mod.rs  object.rs  sleigh.rs  specification.rs  synthesis.rs
crackers/src/gadget/: another_iterator.rs  candidates.rs  iterator.rs  mod.rs  signature.rs
crackers/src/reference_program/: binary.rs  mod.rs  parsed_pcode.rs  step.rs  valuation.rs
crackers/src/synthesis/: assignment_model.rs  builder.rs  combined.rs  config.rs  dpll.rs  greedy.rs  mod.rs  partition_iterator.rs
crackers/src/synthesis/assignment_model/: builder.rs  mod.rs
crackers/src/synthesis/assignment_problem/: assignment_model.rs  mod.rs  pcode_theory.rs  sat_problem.rs
crackers/src/synthesis/assignment_problem/optimization_problem/: mod.rs
crackers/src/synthesis/assignment_problem/pcode_theory/: mod.rs  pairwise.rs
crackers/src/synthesis/assignment_problem/sat_problem/: mod.rs  slot_assignments.rs
crackers/src/synthesis/assignment_problem/sat_problem/slot_assignments/: display.rs  mod.rs
crackers/src/synthesis/assignment_problem/slot_assignments/: display.rs  mod.rs
crackers/src/synthesis/pcode_theory/: builder.rs  mod.rs  pcode_assignment.rs  theory_constraint.rs  theory_worker.rs
crackers/src/synthesis/selection_strategy/: mod.rs  optimization_problem.rs  sat_problem.rs
crackers/src/synthesis/slot_assignments/: display.rs  mod.rs
crackers_python/: CHANGELOG.md  Cargo.toml  Cargo.toml~  PYTHON_README.md  build.rs  crackers.pyi  find_venv_library_path.py  gh_actions_setup.py  mypy.ini  noxfile.py  pyproject.toml  test.py
crackers_python/.cargo/: config.toml
crackers_python/crackers/: __init__.py  __init__.pyi  _internal.pyi  crackers.py  crackers.pyi  crackers_types.py  crackers_types.pyi  jingle.py  jingle.pyi  jingle_types.py  jingle_types.pyi  preamble.py
crackers_python/crackers/config/: __init__.py  constraint.py  crackers.py  library.py  log_level.py  meta.py  sleigh.py  specification.py  synthesis.py
crackers_python/src/: lib.rs  python_logger_layer.rs  synthesis.rs
crackers_python/src/config/: constraint.rs  mod.rs
crackers_python/src/decision/: assignment_model.rs  mod.rs
crackers_python/src/decision/assignment_model/: mod.rs  model_varnode_iterator.rs
examples/crackers_gpt/: main.rs
examples/crackers_gpt/agents/: generic.rs  mod.rs  model.rs
examples/crackers_gpt/agents/assembly/: first_shot_system.txt  mod.rs  reflection_system.txt
examples/crackers_gpt/agents/reflection/: mod.rs  reflection_format.txt  system.txt
examples/crackers_gpt/config/: mod.rs
examples/crackers_gpt/evaluator/: mod.rs
examples/crackers_gpt/procedure/: mod.rs  reflection_format.txt  user.txt
examples/crackers_gpt/specification/: mod.rs
pyconfig/: Cargo.toml
pyconfig/src/: lib.rs
src/: error.rs  lib.rs  main.rs  trace.rs
src/bench/: mod.rs
src/config/: constraint.rs  error.rs  library.rs  meta.rs  mod.rs  object.rs  random.rs  sleigh.rs  specification.rs  synthesis.rs
src/gadget/: another_iterator.rs  candidates.rs  iterator.rs  mod.rs  signature.rs
src/synthesis/: assignment_model.rs  builder.rs  combined.rs  greedy.rs  mod.rs  partition_iterator.rs
src/synthesis/pcode_theory/: builder.rs  conflict_clause.rs  mod.rs  pcode_assignment.rs  theory_constraint.rs  theory_worker.rs
src/synthesis/selection_strategy/: mod.rs  optimization_problem.rs  sat_problem.rs
src/synthesis/slot_assignments/: display.rs  mod.rs
