[package]
name = "crackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crackers"
required-features = ["tracing-subscriber", "toml", "clap"]

[features]
default = ["tracing-subscriber", "toml", "clap"]

tracing-subscriber = ["dep:tracing-subscriber"]
toml = ["dep:toml_edit"]
clap = ["dep:clap"]
bundled = ["z3/bundled"]

[profile.dev]
opt-level = 3

[dependencies]
elf = "0.7.4"
jingle = { git = "https://github.com/toolCHAINZ/jingle", branch = "dev", features = ["elf", "gimli"] }
z3 = { git = "https://github.com/prove-rs/z3.rs.git", rev = "c126e07" }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.58"
rmp-serde = "1.1.2"
tracing = "0.1.40"
colored = "2.1.0"
tracing-subscriber = { version = "0.3.18", optional = true }
toml_edit = { version = "0.22.12", optional = true, features = ["serde"] }
object = { version = "0.36.0" }
clap = { version = "4.0.32", optional = true , features = ["derive"]}
rand = "0.8.5"
