[package]
name = "crackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crackers"
required-features = ["bin"]

[[example]]
name = "crackers_gpt"
required-features = ["gpt"]

[features]
default = ["toml"]
bin = ["dep:tracing-subscriber", "toml", "dep:clap", "dep:anyhow", "dep:tracing-indicatif"]
gpt = ["dep:tracing-subscriber", "dep:cc", "dep:anyhow", "dep:tempfile", "dep:tokio", "dep:async-openai", "dep:clap"]

toml = ["dep:toml_edit"]
bundled = ["z3/bundled"]

[profile.dev]
opt-level = 3

[dependencies]
jingle = { git = "https://github.com/toolCHAINZ/jingle", branch = "main", features = ["gimli"] }
z3 = { git = "https://github.com/prove-rs/z3.rs.git", branch = "master" }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.58"
rmp-serde = "1.1.2"
tracing = "0.1.40"
colored = "2.1.0"
tracing-subscriber = { version = "0.3.18", optional = true, features = ["env-filter"] }
toml_edit = { version = "0.22.12", optional = true, features = ["serde"] }
object = "0.36.7"
clap = { version = "4.0.32", optional = true , features = ["derive"]}
rand = "0.8.5"
derive_builder = "0.20.0"
# gpt example deps
async-openai = { version = "0.23.4", optional = true }
cc = { version = "1.1.10", optional = true }
anyhow = { version = "1.0.86", optional = true }
tempfile = { version = "3.12.0", optional = true }
tokio = { version = "1.39.2", optional = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing-indicatif = { version = "0.3.6", optional = true }
