[package]
name = "crackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.4"
jingle = { path = "../../../CLionProjects/jingle/jingle" }
z3 = { git = "https://github.com/prove-rs/z3.rs.git", rev = "247d308" }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
rmp-serde = "1.1.2"
tracing = "0.1.40"
colored = "2.1.0"
