[package]
name = "crackers"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crackers"
required-features = ["bin"]

[features]
default = ["toml"]
bin = ["dep:tracing-subscriber", "toml", "dep:clap", "dep:anyhow", "dep:tracing-indicatif"]
pyo3 = ["dep:pyo3", "jingle/pyo3"]
toml = ["dep:toml_edit"]
bundled = ["z3/bundled"]

[dependencies]
jingle = { git = "https://github.com/toolCHAINZ/jingle", branch = "main", features = ["gimli"] }
z3 = { git = "https://github.com/toolCHAINZ/z3.rs.git", branch = "patch-1" }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
colored = "3.0"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
toml_edit = { version = "0.22", optional = true, features = ["serde"] }
object = "0.36"
clap = { version = "4.0", optional = true , features = ["derive"]}
rand = "0.8"
derive_builder = "0.20"
anyhow = { version = "1.0", optional = true }
tracing-indicatif = { version = "0.3", optional = true }
pyo3 = { version = "0.24", optional = true }
