[package]
name = "crackers"
version = "0.6.3"
readme = "../README.md"
authors = ["toolCHAINZ"]
license = "MIT"
rust-version = "1.85.0"
homepage = "https://github.com/toolCHAINZ/crackers"
repository = "https://github.com/toolCHAINZ/crackers"
description = "A tool for synthesizing Code Reuse Attacks (ROP chains) using Ghidra's p-code and Z3"
edition = "2024"
keywords = ["rop"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crackers"
required-features = ["bin"]

[features]
default = ["toml"]
bin = ["dep:tracing-subscriber", "toml", "dep:clap", "dep:anyhow", "dep:tracing-indicatif"]
pyo3 = ["dep:pyo3", "jingle/pyo3"]
toml = ["dep:toml_edit"]
z3-gh-release = ["z3/gh-release"]

[dependencies]
jingle = { version = "0.3.6", features = ["gimli"] }
z3 = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
colored = "3.0"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
toml_edit = { version = "0.23.5", optional = true, features = ["serde"] }
object = "0.37.2"
clap = { version = "4.0", optional = true , features = ["derive"]}
rand = "0.9.2"
derive_builder = "0.20"
anyhow = { version = "1.0", optional = true }
tracing-indicatif = { version = "0.3", optional = true }
pyo3 = { version = "0.27.2", optional = true, default-features = false, features = ["macros"] }
