[package]
name = "crackers_python"
version = "0.3.0"
license = "MIT"
edition = "2024"
description = "pyo3 bindings for crackers"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crackers"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "py-clone"] }
crackers = {path = "../crackers", features = ["pyo3"], version = "0.3.0" }
jingle = {version = "0.2.0", features = ["pyo3"]}
toml_edit = "0.22.22"
z3 = "0.14.0"
serde_json = "1.0.140"

[dev-dependencies]
pyo3 = { version = "0", features = ["extension-module"] }
