[package]
name = "crackers_python"
version = "0.5.2"
license = "MIT"
edition = "2024"
description = "pyo3 bindings for crackers"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crackers"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "py-clone"] }
crackers = {path = "../crackers", features = ["pyo3"], version = "0.5.2" }
jingle = { version="0.2.6", features = ["pyo3"]}
toml_edit = { version = "0.23.4", features = ["serde"] }
z3 = "0.18.2"
serde_json = "1.0.140"
lazy_static = "1.5.0"

[dev-dependencies]
pyo3 = { version = "0", features = ["extension-module"] }
