[package]
name = "crackers_python"
version = "0.9.0"
license = "MIT"
edition = "2024"
description = "pyo3 bindings for crackers"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crackers_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "py-clone"] }
crackers = {path = "../crackers", features = ["pyo3"], version = "0.9.0" }
jingle = { version = "0.4.2", features = ["pyo3"]}
toml_edit = { version = "0.23.4", features = ["serde"] }
z3 = "0.19.0"
serde_json = "1.0.140"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
pyo3 = { version = "0", features = ["extension-module"] }
