[build-system]
requires = [
    "maturin>=1.8,<2.0",
    "z3-solver==4.15.4.0",

]
build-backend = "maturin"

[project]
name = "crackers"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.10.6",
    "z3-solver==4.15.3.0",
]
readme = "PYTHON_README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "crackers._internal"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "nox",
    "z3-solver",
    "pydantic>=2.10.6"
]
